--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@font-face {
+  font-family: "Source Sans Pro";
+  src: url("assets/fonts/SourceSansPro-Regular.ttf");
+}
+
+@font-face {
+  font-family: "Source Sans Pro Black";
+  src: url("assets/fonts/SourceSansPro-Black.ttf");
+}
+
+@font-face {
+  font-family: "Source Sans Pro Bold";
+  src: url("assets/fonts/SourceSansPro-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Source Sans Pro SemiBold";
+  src: url("assets/fonts/SourceSansPro-SemiBold.ttf");
+}
+
+body {
+  overflow: hidden;
+  font-family: 'Source Sans Pro', sans-serif;
+  background-color: black;
+}
+
+.bg-asb {
+  background-color: rgb(255, 216, 19);
+}
+
