--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~leaflet/dist/leaflet.css';
+
 @font-face {
   font-family: "Source Sans Pro";
   src: url("assets/fonts/SourceSansPro-Regular.ttf");
